--- a/index.html
+++ b/index.html
@@ -11,13 +11,26 @@
     <link rel="stylesheet" href="style.css">
     <title>Donate Now</title>
 </head>
-<h1>Let’s Help Those Who Are
-    More In Need</h1>
-<h4>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-    deterruisset. No duo populo animal noluisse, enim</h4>
 
 <body>
+    <section>
+        <div class="half-width">
+            <img src="images/donation16.png" alt="" srcset="">
+        </div>
+        <div class="half-width text">
+            <h1><span class="color">Let’s Help</span>Those Who Are More In Need</h1>
+            <b>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                deterruisset. No duo populo animal noluisse, enim</b><br>
+            <strong>Donate Now</strong>
+        </div>
+    </section>
 
+    <div class="center">
+        <h2>Donate Today</h2>
+        <h4>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+            deterruisset. No duo populo animal noluisse, enim
+        </h4>
+    </div>
 </body>
 
 </html>
