--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
             deterruisset. No duo populo animal noluisse, enim
         </h4>
     </div>
+    <section class="amount">
+        <div>
+            <input type="button" value="100tk">
+            <input type="button" value="200tk">
+            <input type="button" value="500tk">
+            <input type="button" value="1000tk">
+            <input type="button" value="5000tk">
+        </div>
+    </section>
 </body>
 
 </html>
