--- a/index.html
+++ b/index.html
@@ -27,19 +27,71 @@
 
     <div class="center">
         <h2>Donate Today</h2>
-        <h4>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
             deterruisset. No duo populo animal noluisse, enim
-        </h4>
+        </p>
     </div>
-    <section class="amount">
-        <div>
-            <input type="button" value="100tk">
-            <input type="button" value="200tk">
-            <input type="button" value="500tk">
-            <input type="button" value="1000tk">
-            <input type="button" value="5000tk">
+
+    <div class="center">
+        <h2>Our Donate Plan</h2>
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+            deterruisset. No duo populo animal noluisse, enim
+        </p>
+    </div>
+
+    <section class="full-plan">
+        <div class="plan" id="food">
+            <img src="icons/food.png" alt="" srcset="">
+            <h3>Food for a family</h3>
+            <p>Amet minim mollit non deserunt
+                ullamco est sit aliqua dolor do amet
+                sint. Velit officia consequat duis enim
+                velit mollit.</p>
+        </div>
+        <div class="plan" id="shelter">
+            <img src="icons/shelter.png" alt="" srcset="">
+            <h3>Shelter for a family</h3>
+            <p>Amet minim mollit non deserunt
+                ullamco est sit aliqua dolor do amet
+                sint. Velit officia consequat duis enim
+                velit mollit.</p>
+        </div>
+        <div class="plan" id="educat">
+            <img src="icons/Frame-1.png" alt="" srcset="">
+            <h3>Education for a child</h3>
+            <p>Amet minim mollit non deserunt
+                ullamco est sit aliqua dolor do amet
+                sint. Velit officia consequat duis enim
+                velit mollit.</p>
         </div>
     </section>
+    <section>
+        <div class="contribute">
+            <div class="contribute-width">
+                <h2>Their lives depend on
+                    your donation</h2>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit
+                    referrentur, at eam falli deterruisset. No duo populo
+                    animal noluisse, enim</p>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit
+                    referrentur, at eam falli deterruisset.</p>
+                <a class="anchor-button" href="">How to Contribute?</a>
+            </div>
+            <div class="contribute-img">
+                <img src="images/donation10.jpg" alt="">
+            </div>
+        </div>
+    </section>
+    <div class="center">
+        <h2>Get My Updates</h2>
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+            deterruisset. No duo populo animal noluisse, enim</p>
+    </div>
+    <input type="email">
+    <input type="submit" value="Subscribe">
+    <footer>
+        <p>© Peter Parker 2023, a Programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
