--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="split-comp">
         <div class="half-width">
             <img src="images/donation16.png" alt="" srcset="">
         </div>
@@ -25,47 +25,56 @@
         </div>
     </section>
 
-    <div class="center">
-        <h2>Donate Today</h2>
-        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-            deterruisset. No duo populo animal noluisse, enim
-        </p>
-    </div>
-
-    <div class="center">
-        <h2>Our Donate Plan</h2>
-        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-            deterruisset. No duo populo animal noluisse, enim
-        </p>
-    </div>
-
-    <section class="full-plan">
-        <div class="plan" id="food">
-            <img src="icons/food.png" alt="" srcset="">
-            <h3>Food for a family</h3>
-            <p>Amet minim mollit non deserunt
-                ullamco est sit aliqua dolor do amet
-                sint. Velit officia consequat duis enim
-                velit mollit.</p>
-        </div>
-        <div class="plan" id="shelter">
-            <img src="icons/shelter.png" alt="" srcset="">
-            <h3>Shelter for a family</h3>
-            <p>Amet minim mollit non deserunt
-                ullamco est sit aliqua dolor do amet
-                sint. Velit officia consequat duis enim
-                velit mollit.</p>
-        </div>
-        <div class="plan" id="educat">
-            <img src="icons/Frame-1.png" alt="" srcset="">
-            <h3>Education for a child</h3>
-            <p>Amet minim mollit non deserunt
-                ullamco est sit aliqua dolor do amet
-                sint. Velit officia consequat duis enim
-                velit mollit.</p>
-        </div>
-    </section>
     <section>
+        <div class="center">
+            <h2>Donate Today</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                deterruisset. No duo populo animal noluisse, enim
+            </p>
+        </div>
+
+    </section>
+
+
+    <section>
+
+        <div class="center">
+            <h2>Our Donate Plan</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                deterruisset. No duo populo animal noluisse, enim
+            </p>
+        </div>
+
+        <section class="full-plan split-comp">
+            <div class="plan" id="food">
+                <img src="icons/food.png" alt="" srcset="">
+                <h3>Food for a family</h3>
+                <p>Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.</p>
+            </div>
+            <div class="plan" id="shelter">
+                <img src="icons/shelter.png" alt="" srcset="">
+                <h3>Shelter for a family</h3>
+                <p>Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.</p>
+            </div>
+            <div class="plan" id="educat">
+                <img src="icons/Frame-1.png" alt="" srcset="">
+                <h3>Education for a child</h3>
+                <p>Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.</p>
+            </div>
+        </section>
+
+    </section>
+
+    <section class="split-comp">
         <div class="contribute">
             <div class="contribute-width">
                 <h2>Their lives depend on
@@ -87,10 +96,9 @@
         <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
             deterruisset. No duo populo animal noluisse, enim</p>
     </div>
-    <input type="email">
-    <input type="submit" value="Subscribe">
+
     <footer>
-        <p>© Peter Parker 2023, a Programming Hero initiative.</p>
+        <p></p>
     </footer>
 </body>
 
