--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <div class="half-width">
             <img src="images/donation16.png" alt="" srcset="">
         </div>
-        <div class="half-width text">
+        <div class="text-right half-width">
             <h1><span class="color">Let’s Help</span>Those Who Are More In Need</h1>
-            <b>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                deterruisset. No duo populo animal noluisse, enim</b><br>
-            <strong>Donate Now</strong>
+            <p style="color: black;">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+                fallideterruisset. No duo populo animal noluisse, enim</p><br><br>
+            <strong class="donate-icon">Donate Now</strong>
         </div>
     </section>
 
@@ -32,7 +32,20 @@
                 deterruisset. No duo populo animal noluisse, enim
             </p>
         </div>
-
+        <div class="center">
+            <input type="button" value="100tk" class="price-button">
+            <input type="button" value="200tk" class="price-button">
+            <input type="button" value="500tk" class="price-button-selected">
+            <input type="button" value="1000tk" class="price-button">
+            <input type="button" value="5000tk" class="price-button">
+        </div>
+        <div class="center">
+            <input type="text" class="edit-text" placeholder="Other amount (Taka)">
+            <hr>
+        </div>
+        <div class="center donate-button">
+            <input type="submit" value="Donate Now">
+        </div>
     </section>
 
 
@@ -87,18 +100,25 @@
                 <a class="anchor-button" href="">How to Contribute?</a>
             </div>
             <div class="contribute-img">
-                <img src="images/donation10.jpg" alt="">
+                <img src="images/donation9.jpg" alt="">
             </div>
         </div>
     </section>
-    <div class="center">
-        <h2>Get My Updates</h2>
-        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-            deterruisset. No duo populo animal noluisse, enim</p>
-    </div>
+    <section>
+        <div class="center">
+            <h2>Get My Updates</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div class="center">
+            <input type="text" class="edit-email" placeholder="Email">
+            <input type="submit" class="edit-sub-button" value="Subscribe">
+        </div>
+    </section>
 
-    <footer>
-        <p></p>
+    <footer class="center fot">
+        <h2 class="fot-ic">Be Humble</h2>
+        <p class="fot-las">I’m gonna do it</p>
     </footer>
 </body>
 
