--- a/index.html
+++ b/index.html
@@ -7,20 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Arima&family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Arima&family=PT+Serif&family=Poppins&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="icons/icon.png">
     <title>Donate Now</title>
 </head>
 
 <body>
-    <section class="split-comp">
+    <section class="for-flex">
         <div class="half-width">
             <img src="images/donation16.png" alt="" srcset="">
         </div>
         <div class="text-right half-width">
-            <h1><span class="color">Let’s Help</span>Those Who Are More In Need</h1>
-            <p style="color: black;">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
-                fallideterruisset. No duo populo animal noluisse, enim</p><br><br>
+            <h1>MAKE A <span class="colorford">DONATION NOW</span></h1>
+            <p style="color: black;">Right now, the world's children are growing up in a deadly pandemic–their lives
+                and futures on the line. But through the dedicated support of donors like you, Save the Children is on
+                the front lines.</p><br><br>
             <strong class="donate-icon">Donate Now</strong>
         </div>
     </section>
@@ -28,75 +31,80 @@
     <section>
         <div class="center">
             <h2>Donate Today</h2>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                deterruisset. No duo populo animal noluisse, enim
-            </p>
+            <p>Right now, children are living through a global pandemic against the backdrop of hunger, conflict and
+                natural disasters. Your gift today can help make change that protects the lives of children, families
+                and their communities.</p>
         </div>
         <div class="center">
-            <input type="button" value="100tk" class="price-button">
-            <input type="button" value="200tk" class="price-button">
-            <input type="button" value="500tk" class="price-button-selected">
-            <input type="button" value="1000tk" class="price-button">
-            <input type="button" value="5000tk" class="price-button">
+            <input type="button" value="£10" class="price-button">
+            <input type="button" value="£20" class="price-button">
+            <input type="button" value="£50" class="price-button-selected">
+            <input type="button" value="£70" class="price-button">
+            <input type="button" value="£100" class="price-button">
         </div>
         <div class="center">
-            <input type="text" class="edit-text" placeholder="Other amount (Taka)">
+            <input type="text" class="edit-text" placeholder="other amount">
             <hr>
         </div>
-        <div class="center donate-button">
-            <input type="submit" value="Donate Now">
+        <div class="center">
+            <input type="submit" class="donate-button" value="Donate Now">
         </div>
     </section>
 
+    <section>
+        <div class="center">
+            <h2>Donating to Save the CHILDREN</h2>
+            <p>Whether you've made a one-off gift or monthly donation, thank you. Your gift will help children get the
+                food, healthcare and education they need.</p>
+        </div>
+    </section>
 
     <section>
-
-        <div class="center">
-            <h2>Our Donate Plan</h2>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
-                deterruisset. No duo populo animal noluisse, enim
-            </p>
-        </div>
-
-        <section class="full-plan split-comp">
-            <div class="plan" id="food">
-                <img src="icons/food.png" alt="" srcset="">
-                <h3>Food for a family</h3>
-                <p>Amet minim mollit non deserunt
-                    ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis enim
-                    velit mollit.</p>
-            </div>
-            <div class="plan" id="shelter">
-                <img src="icons/shelter.png" alt="" srcset="">
-                <h3>Shelter for a family</h3>
-                <p>Amet minim mollit non deserunt
-                    ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis enim
-                    velit mollit.</p>
-            </div>
-            <div class="plan" id="educat">
-                <img src="icons/Frame-1.png" alt="" srcset="">
-                <h3>Education for a child</h3>
-                <p>Amet minim mollit non deserunt
-                    ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis enim
-                    velit mollit.</p>
+        <section>
+            <div class="center">
+                <h2>Our Donate Plan</h2>
+                <p>We have some donation plan. Your donation will support plan international's vital work to advance
+                    children's</p>
             </div>
         </section>
 
+        <section class="full-plan for-flex">
+
+            <div class="plan" id="food">
+                <img src="icons/food.png" alt="" srcset="">
+                <h3>Food for a child</h3>
+                <p>Every year, more than 3 million children die because they can't enough food, that number could almost
+                    double because of the Pandemic. We're helping families beat malnutrition with cash, food voucher
+                    advice on nutrition and medical treatment. We're supporting communities to grow their own food and
+                    pushing world leader to fund nutrition plans.</p>
+            </div>
+
+            <div class="plan" id="shelter">
+                <img src="icons/medicine.svg" alt="" srcset="">
+                <h3>Medicine for a child</h3>
+                <p>Many disease can be treated with basic medicine, yet every year million of children die from
+                    preventable disease. We're helping communities strengthen their vaccinating million of children each
+                    year. And calling on world leaders to make universal healthcare a reality.</p>
+            </div>
+
+            <div class="plan" id="educat">
+                <img src="icons/Frame-1.png" alt="" srcset="">
+                <h3>Education for a child</h3>
+                <p>Even before Pandemic 258 million children were looked out of School. When this is over, we need a
+                    world where every child in learning full-time. The impact would be enormous. Right now we're
+                    supporting children through remote learning and essential items like books.</p>
+            </div>
+        </section>
     </section>
 
-    <section class="split-comp">
+    <section class="for-flex">
         <div class="contribute">
             <div class="contribute-width">
                 <h2>Their lives depend on
                     your donation</h2>
-                <p>Lorem ipsum dolor sit amet, usu cu esse possit
-                    referrentur, at eam falli deterruisset. No duo populo
-                    animal noluisse, enim</p>
-                <p>Lorem ipsum dolor sit amet, usu cu esse possit
-                    referrentur, at eam falli deterruisset.</p>
+                <p>Donating is also one of the great ways to help the poor. Some of the well known and established
+                    origination is also helping deprived children to get meal. We waiting for you. They waits for us.
+                </p>
                 <a class="anchor-button" href="">How to Contribute?</a>
             </div>
             <div class="contribute-img">
@@ -116,10 +124,12 @@
         </div>
     </section>
 
-    <footer class="center fot">
-        <h2 class="fot-ic">Be Humble</h2>
-        <p class="fot-las">I’m gonna do it</p>
-    </footer>
+    <section>
+        <footer class="center fot">
+            <h2 class="fot-ic">Humble</h2>
+            <p class="fot-las">Together we power possible</p>
+        </footer>
+    </section>
 </body>
 
 </html>
